--- a/src/main/webapp/pages/Proyecto/mantProyecto.xhtml
+++ b/src/main/webapp/pages/Proyecto/mantProyecto.xhtml
@@ -91,7 +91,7 @@
 					<p:panelGrid id="panel_tabPersonal">
 						<p:row>
 							<p:column>
-								<h:outputText value="PERSONA"  />
+								<h:outputText styleClass="labelDialog" value="PERSONAL"  />
 							</p:column>
 							<p:column>
 							<p:inputText value="#{ProyectoBean.personalAsignado.personal.nombre}" required="true"
